Closed Bug 1700206 Opened 4 years ago Closed 4 years ago

sw-wr: non-native radio buttons on wiki.mozilla.org have white vertical and horizontal seams

Categories

(Core :: Graphics: WebRender, defect, P3)

defect

Tracking

()

VERIFIED FIXED
89 Branch
Tracking Status
firefox-esr78 --- disabled
firefox86 --- disabled
firefox87 --- disabled
firefox88 --- fixed
firefox89 --- fixed

People

(Reporter: cpeterson, Assigned: lsalzman)

References

(Blocks 1 open bug, Regression, )

Details

(Keywords: regression)

Attachments

(3 files)

Steps to reproduce

  1. Set gfx.webrender.software = true and widget.non-native-theme.enabled = true (which is already the default in 88 Nightly) and restart Nightly.
  2. Load https://wiki.mozilla.org/index.php?title=Main_Page&action=history. You don't need a wiki account.
  3. Look at the radio buttons in the "Compare selected revisions" list.

Expected result

The radio buttons should not have any seams.

Actual result

The radio buttons on wiki.mozilla.org have white vertical and horizontal seams. See the attached screenshot.

Curiously, the radio buttons on Wikipedia don't have the seams. Perhaps wiki.mozilla.org styles its radio buttons differently?

https://en.wikipedia.org/w/index.php?title=Mozilla&action=history

Harry, I believe your fix for Proton bug 1696469 caused this radio button bug when using Software WebRender. I bisected this regression to the following pushlog:

https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=4d4bc56f77a199234c625dfdd85d06c62caae273&tochange=fa6296b812008dfdde11078acba9142c687f85aa

Flags: needinfo?(htwyford)
Regressed by: 1696469

That seems like a very unlikely regression range. I came up with a range which included https://hg.mozilla.org/mozilla-central/rev/2d0e67c944f238704125182f0c7006895a39bd86, which sounds about right.

We use borders to render circles, like we do for list bullets (via this code). It seems only SW-WR has issues with them, at some zoom levels. This probably affects other web content too, so while it can be worked around by setting widget.non-native-theme.webrender=false, we should probably get it fixed in sw-wr.

a webcontent test case for this would be helpful.

Attached file testcase

This shows the issue for me at some zoom levels. A bit less pronounced than in the radio control case though.

Attachment #9210865 - Attachment mime type: text/plain → text/html

(In reply to Emilio Cobos Álvarez (:emilio) from comment #2)

That seems like a very unlikely regression range. I came up with a range which included https://hg.mozilla.org/mozilla-central/rev/2d0e67c944f238704125182f0c7006895a39bd86, which sounds about right.

Thanks. In that case, I will clear the needinfo for Harry.

Flags: needinfo?(htwyford)
Regressed by: 1694059
No longer regressed by: 1696469
Has Regression Range: --- → yes
Severity: -- → S3
Priority: -- → P3

Sometimes we sample slightly outside the tile repeat boundaries due to rounding
or anti-aliasing, which may cause potential sampling artifacts along primitive
edges. This adds supports for enforcing tile repeat limits as we otherwise do
in the brush_image shader to prevent such artifacts.

Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d90ccb089550 Support tile repeat limits in SWGL. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch

Would it be possible to land a test for this?

Flags: needinfo?(lsalzman)
Flags: in-testsuite?

nvm, I see that's covered by the comment in Phabricator

Flags: needinfo?(lsalzman)
Flags: in-testsuite?
Flags: in-testsuite-

Works great here now.

Status: RESOLVED → VERIFIED

Comment on attachment 9212792 [details]
Bug 1700206 - Support tile repeat limits in SWGL. r?jrmuizel

Beta/Release Uplift Approval Request

  • User impact if declined: Visual artifacts on SW-WR with non-native theming, and possibly on web content with repeating backgrounds.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This change only affects SW-WR rollout in 88, and should only impact this particular corner-case.
  • String changes made/needed:
Attachment #9212792 - Flags: approval-mozilla-beta?

Comment on attachment 9212792 [details]
Bug 1700206 - Support tile repeat limits in SWGL. r?jrmuizel

Approved for 88.0b7.

Attachment #9212792 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: