Bug 1700206 - Support tile repeat limits in SWGL. r=jrmuizel

Sometimes we sample slightly outside the tile repeat boundaries due to rounding
or anti-aliasing, which may cause potential sampling artifacts along primitive
edges. This adds supports for enforcing tile repeat limits as we otherwise do
in the brush_image shader to prevent such artifacts.

Differential Revision: https://phabricator.services.mozilla.com/D110397